# daily-reader

./: .gitignore  README.md  documents.py  feed.xml  generate_feed.py  index.html  mailer.py  main.py  marker_converter.py  pyproject.toml  renderer.py  sections.py  state.json  state.yaml
.agent/skills/marker/: SKILL.md
.agent/skills/pdf2htmlex/: SKILL.md
.agent/skills/sending-emails/: SKILL.md
pages/: 7a3331a496c2255d.html
pages/2026-03-21/: index.html
pages/2026-03-22/: index.html  section-arxiv.html  section-ml.html
pages/7a3331a496c2255d/: index.html
renderer/: __init__.py  engine.py
renderer/static/: daily-reader.css  daily-reader.js  laptop.css  laptop.js
renderer/static/sections/: arxiv.css  books.css  ml.css
renderer/templates/: _article.html  base.html  bookshelf.html  ml.html  page.html  section.html  section_fragment.html  today.html
site/: index.html
site/pages/: 094bc014fe49a63b.html  a43990acc0843038.html  fd9506b2b5d40efa.html
